--- a/views/admin/adcanhan/doimatkhau.ejs
+++ b/views/admin/adcanhan/doimatkhau.ejs
@@ -36,6 +36,24 @@
                                         </form>
                                     </div>
                                 </div>
+                                <div class="modal fade" tabindex="-1" role="dialog" id="modalNotify">
+                                    <div class="modal-dialog" role="document">
+                                      <div class="modal-content">
+                                        <div class="modal-header">
+                                          <h5 class="modal-title">Thông báo</h5>
+                                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                          </button>
+                                        </div>
+                                        <div class="modal-body">
+                                          <p><%= mess %></p>
+                                        </div>
+                                        <div class="modal-footer">
+                                          <button type="button" id="btnOk" class="btn btn-primary">Ok</button>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
                             </div>
                         </section>
                         <%- include('../partials/adminfooter'); -%>
@@ -46,6 +64,23 @@
     </body>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
     <script>
+           
+                let mess = `<%= mess %>`;
+
+                if(mess && mess != ''){
+                    $('#modalNotify').modal('show');
+
+                    $('#btnOk').click(function(){
+                        if(mess == 'Đổi mật khẩu thành công'){
+                            $('#modalNotify').modal('hide');
+                            window.location.replace('/admin/login');
+                        }else{
+                            $('#modalNotify').modal('hide');
+                        }
+                    })
+                }
+            
+
             $("#formChangePass").validate({
                 rules: {
                     mkcu:{
@@ -75,20 +110,6 @@
                    
                 }
             });
-
-
-            let mess = `<%= mess %>`
-
-            if(mess && mess != ''){
-                alert(mess);
-
-                if(mess == 'Đổi mật khẩu thành công'){
-                    window.location.replace('/admin/login');
-                }
-                
-            }
-      
-
     </script>
 
 </html>
