--- a/views/admin/adlogin/login.ejs
+++ b/views/admin/adlogin/login.ejs
@@ -1,25 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <%- include('../partials/adminhead'); -%>
-<body>
-<div class="log-w3">
-<div class="w3layouts-main">
-	<h2 style="color:darkblue">ĐĂNG NHẬP</h2>
-		<form action="/admin/login" method="post">
-			<input type="text" class="ggg" name="username" placeholder="USERNAME OR EMAIL" required="">
-			<input type="password" class="ggg" name="password" placeholder="PASSWORD" required="">
-			<h6><a style="color:chocolate;" href="/admin/quenmatkhau/email">Quên mật khẩu</a></h6>
-				<div class="clearfix"></div>
-				<input style="color:blue" type="submit" value="ĐĂNG NHẬP" name="login">
-		</form>
-</div>
-</div>
-<%- include('../partials/adminscript_bottom'); -%>
-</body>
-<script>
-	let mess='<%= message %>';
-	if(mess){
-		alert(mess);
-	}
-</script>
+
+	<body>
+		<div class="log-w3">
+			<div class="w3layouts-main">
+				<h2 style="color:darkblue">ĐĂNG NHẬP</h2>
+				<form action="/admin/login" method="post">
+					<input type="text" class="ggg" name="username" placeholder="USERNAME OR EMAIL" required="">
+					<input type="password" class="ggg" name="password" placeholder="PASSWORD" required="">
+					<h6><a style="color:chocolate;" href="/admin/quenmatkhau/email">Quên mật khẩu</a></h6>
+					<div class="clearfix"></div>
+					<input style="color:blue" type="submit" value="ĐĂNG NHẬP" name="login">
+				</form>
+			</div>
+			<div class="modal fade" tabindex="-1" role="dialog" id="modalNotify">
+				<div class="modal-dialog" role="document">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h5 class="modal-title">Thông báo</h5>
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+								<span aria-hidden="true">&times;</span>
+							</button>
+						</div>
+						<div class="modal-body">
+							<p>Tài khoản không hợp lệ</p>
+						</div>
+						<div class="modal-footer">
+							<button type="button" id="btnOk" class="btn btn-primary">Ok</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<%- include('../partials/adminscript_bottom'); -%>
+	</body>
+	<script>
+		let mess = `<%= mess %>`;
+
+		if (mess && mess == 0) {
+			$('#modalNotify').modal('show');
+
+			$('#btnOk').click(function () {
+				$('#modalNotify').modal('hide');
+			})
+		}
+	</script>
+
 </html>
