--- a/views/admin/adsanpham/create.ejs
+++ b/views/admin/adsanpham/create.ejs
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-    <style>
-        .error{
-            color: #f20;
-            font-style: italic;
-        }
-    
-        .imgproduct-container{
-            display: flex;
-        }
-    </style>
+<style>
+    .error {
+        color: #f20;
+        font-style: italic;
+    }
+
+    .imgproduct-container {
+        display: flex;
+    }
+</style>
 <%- include('../partials/adminhead'); -%>
-    
+
     <body>
         <section id="container">
             <%- include('../partials/adminheader'); -%>
@@ -32,25 +32,29 @@
                                                 placeholder="Tên sản phẩm"><br>
                                             <label>Giá tiền</label>
                                             <input type="number" class="form-control" name="giatien"
-                                                placeholder="Giá sản phẩm" ><br>
+                                                placeholder="Giá sản phẩm"><br>
                                             <label>Trạng thái</label> <br />
-                                            <input name="trangthai" type="radio" value="1" checked="checked" >
+                                            <input name="trangthai" type="radio" value="1" checked="checked">
                                             Còn Hàng
                                             <input name="trangthai" type="radio" value="0"> Hết Hàng <br />
                                             <br />
 
                                             <label><img src="">Hình ảnh</label>
-                                            <input accept="image/*" id="imghinh" type="file" class="form-control" name="hinhanh"
-                                                placeholder="Hình ảnh" multiple><br>
+                                            <input accept="image/*" id="imghinh" type="file" class="form-control"
+                                                name="hinhanh" placeholder="Hình ảnh" multiple><br>
                                             <div class="imgproduct-container">
-                                                <img src="#" alt="your image" width="100" height="100" class="imgproduct" /><br/>
-                                                <img src="#" alt="your image" width="100" height="100" class="imgproduct" /><br/>
-                                                <img src="#" alt="your image" width="100" height="100" class="imgproduct" /><br/>
-                                                <img src="#" alt="your image" width="100" height="100" class="imgproduct" /><br/>
+                                                <img src="#" alt="your image" width="100" height="100"
+                                                    class="imgproduct" /><br />
+                                                <img src="#" alt="your image" width="100" height="100"
+                                                    class="imgproduct" /><br />
+                                                <img src="#" alt="your image" width="100" height="100"
+                                                    class="imgproduct" /><br />
+                                                <img src="#" alt="your image" width="100" height="100"
+                                                    class="imgproduct" /><br />
                                             </div>
-                                                
+
                                             <label>Thương hiệu</label>
-                                            <select name="id_math" class="form-control" >
+                                            <select name="id_math" class="form-control">
                                                 <option value="">------Chọn thương hiệu-------</option>
                                                 <% for(let i=0; i < thuonghieus.length; i++) {%>
                                                     <option value="<%= thuonghieus[i].math %>">
@@ -61,7 +65,7 @@
                                             <label>Mô tả</label><br />
                                             <textarea id="mota" name="mota" rows="4" cols="140"></textarea><br /><br />
                                             <label>Loại sản phẩm</label>
-                                            <select name="id_maloai" class="form-control" >
+                                            <select name="id_maloai" class="form-control">
                                                 <option value="">------Chọn danh mục-------</option>
                                                 <% for(let i=0; i < danhmucs.length; i++) {%>
                                                     <option value="<%= danhmucs[i].maloai %>">
@@ -70,10 +74,29 @@
                                                     <% } %>
                                             </select><br>
                                             <input type="submit" name="themsanpham" value="Thêm sản phẩm"
-                                                 class="btn btn-primary"><br />
+                                                class="btn btn-primary"><br />
                                             <br />
                                             <a class="btn btn-info" href="/admin/sanpham?page=1">Quay lại?</a>
                                         </form>
+                                    </div>
+                                </div>
+                                <div class="modal fade" tabindex="-1" role="dialog" id="modalNotify">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title">Thông báo</h5>
+                                                <button type="button" class="close" data-dismiss="modal"
+                                                    aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <p id="mess"></p>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" id="btnOk" class="btn btn-primary">Ok</button>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -88,64 +111,75 @@
     <script>
         let files = [];
         //hiển thị ảnh
-       imghinh.onchange = evt => {
+        imghinh.onchange = evt => {
             files = imghinh.files;
             const imgs = document.getElementsByClassName('imgproduct');
             let i = 0;
-            
+
             for (let index = 0; index < 4; index++) {
-                imgs[i++].src = URL.createObjectURL(files[index]);           
+                imgs[i++].src = URL.createObjectURL(files[index]);
             }
         }
 
-            $("#formAddProduct").validate({
-                rules: {
-                    tensp: {
-                        required: true,                    
-                    },
-                    giatien: {
-                        required: true,                    
-                    },
-                    id_math:{
-                        required: true
-                    },
-                    hinhanh:{
-                        required: true
-                    },
-                    id_maloai:{
-                        required: true
-                    },
+        $("#formAddProduct").validate({
+            rules: {
+                tensp: {
+                    required: true,
                 },
-                messages:{
-                    tensp: {
-                        required: 'Tên sản phẩm không được để trống'
-                    },
-                    giatien: {
-                        required: 'Giá sản phẩm không được để trống'
-                    },
-                    id_math:{
-                        required: 'Thương hiệu không được để trống'
-                    },
-                    hinhanh:{
-                        required: 'Hình ảnh không được để trống'
-                    },
-                    id_maloai:{
-                        required: 'Loại sản phẩm không được để trống'
-                    },
-                }
-            });
-            const count = files.length;
+                giatien: {
+                    required: true,
+                },
+                id_math: {
+                    required: true
+                },
+                hinhanh: {
+                    required: true
+                },
+                id_maloai: {
+                    required: true
+                },
+            },
+            messages: {
+                tensp: {
+                    required: 'Tên sản phẩm không được để trống'
+                },
+                giatien: {
+                    required: 'Giá sản phẩm không được để trống'
+                },
+                id_math: {
+                    required: 'Thương hiệu không được để trống'
+                },
+                hinhanh: {
+                    required: 'Hình ảnh không được để trống'
+                },
+                id_maloai: {
+                    required: 'Loại sản phẩm không được để trống'
+                },
+            }
+        });
+
+        $('#btnOk').click(function () {
+            $('#modalNotify').modal('hide');
+        })
+
+        const count = files.length;
         $('input[name=themsanpham]').click(function () {
             let count = files.length;
 
-            if(count < 4){
-                alert('Hình ảnh còn thiếu');
-                return false;  
+            if (count < 4) {
+                $('#mess').text('Hình ảnh còn thiếu');
+
+                $('#modalNotify').modal('show');
+
+                return false;
             }
 
             for (let i = 0; i < count; i++) {
                 if (!files[i].type.includes('image')) {
-                    alert('Hình ảnh không hợp lệ');
+                    $('#mess').text('Hình ảnh không hợp lệ');
+
+                    $('#modalNotify').modal('show');
+
                     return false;
                 }
             }
