--- a/views/admin/adsanpham/update.ejs
+++ b/views/admin/adsanpham/update.ejs
@@ -92,6 +92,25 @@
                                         </form>
                                     </div>
                                 </div>
+                                <div class="modal fade" tabindex="-1" role="dialog" id="modalNotify">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title">Thông báo</h5>
+                                                <button type="button" class="close" data-dismiss="modal"
+                                                    aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <p id="mess"></p>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" id="btnOk" class="btn btn-primary">Ok</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </section>
                         <%- include('../partials/adminfooter'); -%>
@@ -140,18 +159,27 @@
                 }
             }
         });
+
+        $('#btnOk').click(function(){
+            $('#modalNotify').modal('hide');
+        })
+
         const count = files.length;
         $('input[name=capnhatsanpham]').click(function () {
             let count = files.length;
 
             if(count < 4){
-                alert('Hình ảnh còn thiếu');
+                $('#mess').text('Hình ảnh còn thiếu');
+
+               $('#modalNotify').modal('show');
                 return false;  
             }
 
             for (let i = 0; i < count; i++) {
                 if (!files[i].type.includes('image')) {
-                    alert('Hình ảnh không hợp lệ');
+                    $('#mess').text('Hình ảnh không hợp lệ');
+
+                    $('#modalNotify').modal('show');
                     return false;
                 }
             }
