--- a/views/admin/adthuonghieu/createthuonghieu.ejs
+++ b/views/admin/adthuonghieu/createthuonghieu.ejs
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-    <style>
-        .error{
-            color: #f20;
-            font-style: italic;
-        }
-    </style>
+<style>
+    .error {
+        color: #f20;
+        font-style: italic;
+    }
+</style>
 <%- include('../partials/adminhead'); -%>
+
     <body>
         <section id="container">
             <%- include('../partials/adminheader'); -%>
@@ -20,23 +21,45 @@
                                         <div class="panel-heading">
                                             THÊM THƯƠNG HIỆU
                                         </div>
-                                        <form method="POST" action="/admin/thuonghieu/createThuongHieu" enctype="multipart/form-data" id="formAddProduct">
+                                        <form method="POST" action="/admin/thuonghieu/createThuongHieu"
+                                            enctype="multipart/form-data" id="formAddProduct">
                                             <label>Tên thương hiệu</label>
-                                            <input type="text" class="form-control" name="tenth" placeholder="Tên thương hiệu"><br>
-                                            
+                                            <input type="text" class="form-control" name="tenth"
+                                                placeholder="Tên thương hiệu"><br>
+
                                             <label>Hình ảnh</label>
-                                            <input accept="image/*" id="imgthuonghieu" type="file" class="form-control" name="hinhanh" placeholder="Hình ảnh"><br>
-                                            <img id="blah" src="#" alt="your image" width="100" height="100" /><br/>
-                                            
+                                            <input accept="image/*" id="imgthuonghieu" type="file" class="form-control"
+                                                name="hinhanh" placeholder="Hình ảnh"><br>
+                                            <img id="blah" src="#" alt="your image" width="100" height="100" /><br />
+
                                             <label>Chi tiết</label><br />
                                             <textarea id="mota" name="chitiet" rows="4" cols="140"></textarea><br />
 
                                             <br />
                                             <input type="submit" name="themthuonghieu" value="Thêm thương hiệu"
-                                                class="btn btn-primary"><br/>
-                                            <br/>
+                                                class="btn btn-primary"><br />
+                                            <br />
                                             <a class="btn btn-info" href="admin/thuonghieu">Quay lại?</a>
                                         </form>
+                                    </div>
+                                </div>
+                                <div class="modal fade" tabindex="-1" role="dialog" id="modalNotify">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title">Thông báo</h5>
+                                                <button type="button" class="close" data-dismiss="modal"
+                                                    aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <p id="mess"></p>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" id="btnOk" class="btn btn-primary">Ok</button>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -61,36 +84,42 @@
         }
 
         $("#formAddProduct").validate({
-                rules: {
-                    tenth: {
-                        required: true,                    
-                    },
-                    chitiet: {
-                        required: true,                    
-                    },
-                    hinhanh: {
-                        required: true,                    
-                    }
+            rules: {
+                tenth: {
+                    required: true,
                 },
-                messages:{
-                    tenth: {
-                        required: 'Tên thương hiệu không được để trống'
-                    },
-                    chitiet: {
-                        required: 'Chi tiết thương hiệu không được để trống'
-                    },
-                    hinhanh: {
-                        required: 'Hình ảnh không được để trống'
-                    },
+                chitiet: {
+                    required: true,
+                },
+                hinhanh: {
+                    required: true,
                 }
-            });
+            },
+            messages: {
+                tenth: {
+                    required: 'Tên thương hiệu không được để trống'
+                },
+                chitiet: {
+                    required: 'Chi tiết thương hiệu không được để trống'
+                },
+                hinhanh: {
+                    required: 'Hình ảnh không được để trống'
+                },
+            }
+        });
+
+        $('#btnOk').click(function () {
+            $('#modalNotify').modal('hide');
+        })
         $('input[name=themthuonghieu]').click(function () {
-       
+
             if (!file.type.includes('image')) {
-                alert('Hình ảnh không hợp lệ');
+                $('#mess').text('Hình ảnh không hợp lệ');
+
+                $('#modalNotify').modal('show');
                 return false;
             }
-    
+
             return true;
         })
     </script>
