--- a/views/admin/adtintuc/updateblog.ejs
+++ b/views/admin/adtintuc/updateblog.ejs
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-    <style>
-        .error{
-            color: #f20;
-            font-style: italic;
-        }
-    </style>
+<style>
+    .error {
+        color: #f20;
+        font-style: italic;
+    }
+</style>
 <%- include('../partials/adminhead'); -%>
+
     <body>
         <section id="container">
             <%- include('../partials/adminheader'); -%>
@@ -20,40 +21,64 @@
                                         <div class="panel-heading">
                                             CẬP NHẬT TIN TỨC
                                         </div>
-                                        <form method="POST" action="/admin/tintuc/updatetintuc" 
-                                                            enctype="multipart/form-data" id="formUpdateProduct">
+                                        <form method="POST" action="/admin/tintuc/updatetintuc"
+                                            enctype="multipart/form-data" id="formUpdateProduct">
                                             <label>Mã tin tức</label>
-                                            <input type="text" class="form-control" name="matt" value="<%= blog.matt %>" readonly /><br>
+                                            <input type="text" class="form-control" name="matt" value="<%= blog.matt %>"
+                                                readonly /><br>
 
                                             <label>Tên tiêu đề</label>
-                                            <input type="text" class="form-control" name="tieude" value="<%= blog.tieude %>"
-                                            placeholder="Tên tiêu đề"><br>
-                                            
+                                            <input type="text" class="form-control" name="tieude"
+                                                value="<%= blog.tieude %>" placeholder="Tên tiêu đề"><br>
+
                                             <label>Nội dung</label><br />
-                                            <textarea id="mota" name="noidung" rows="4" cols="140"> <%= blog.noidung %> </textarea><br />
+                                            <textarea id="mota" name="noidung" rows="4"
+                                                cols="140"> <%= blog.noidung %> </textarea><br />
 
                                             <label><img src="">Hình ảnh</label>
-                                            <input accept="image/*" value= "client/img/tintuc/<%= blog.hinhanh%>" type="file" class="form-control" 
-                                            name="hinhanh" onchange="readFileImage(this)">
+                                            <input accept="image/*" value="client/img/tintuc/<%= blog.hinhanh%>"
+                                                type="file" class="form-control" name="hinhanh"
+                                                onchange="readFileImage(this)">
                                             <br>
-                                            <img src="client/img/tintuc/<%= blog.hinhanh%>" width="100" height="100" id="imgTinTuc"/>
+                                            <img src="client/img/tintuc/<%= blog.hinhanh%>" width="100" height="100"
+                                                id="imgTinTuc" />
 
-                                            <br/>
+                                            <br />
                                             <label>Trạng thái</label> <br />
                                             <% if(blog.trangthai){ %>
-                                            <input name="trangthai" type="radio" value="1" checked="checked"> Bật
-                                            <input name="trangthai" type="radio" value="0"> Tắt <br />
-                                            <% } else { %>
-                                                <input name="trangthai" type="radio" value="1"/> Bật
-                                                <input name="trangthai" type="radio" value="0" checked="checked" /> Tắt <br/>
-                                            <% } %>
-                                            <br />
-                                            
-                                            <input type="submit" name="capnhattintuc" value="Cập nhật tin tức"
-                                                class="btn btn-primary"><br/>
-                                            <br/>
-                                            <a class="btn btn-info" href="admin/tintuc">Quay lại?</a>
+                                                <input name="trangthai" type="radio" value="1" checked="checked"> Bật
+                                                <input name="trangthai" type="radio" value="0"> Tắt <br />
+                                                <% } else { %>
+                                                    <input name="trangthai" type="radio" value="1" /> Bật
+                                                    <input name="trangthai" type="radio" value="0" checked="checked" />
+                                                    Tắt <br />
+                                                    <% } %>
+                                                        <br />
+
+                                                        <input type="submit" name="capnhattintuc"
+                                                            value="Cập nhật tin tức" class="btn btn-primary"><br />
+                                                        <br />
+                                                        <a class="btn btn-info" href="admin/tintuc">Quay lại?</a>
                                         </form>
+                                    </div>
+                                </div>
+                                <div class="modal fade" tabindex="-1" role="dialog" id="modalNotify">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title">Thông báo</h5>
+                                                <button type="button" class="close" data-dismiss="modal"
+                                                    aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <p id="mess"></p>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" id="btnOk" class="btn btn-primary">Ok</button>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -67,19 +92,19 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
     <script>
         let files = [];
-        let isImag = '<%= blog.hinhanh%>'; 
+        let isImag = '<%= blog.hinhanh%>';
 
-        if(!isImag){
+        if (!isImag) {
             $('#imgTinTuc').hide();
         }
 
-        function readFileImage(input){
+        function readFileImage(input) {
             files = input.files;
             // Neu co upload file va co file dau tien 
-            if(input.files && input.files[0]){
+            if (input.files && input.files[0]) {
                 var reader = new FileReader();
 
-                reader.onload = function(e){
+                reader.onload = function (e) {
                     $('#imgTinTuc').show().attr('src', e.target.result);
                 }
 
@@ -88,33 +113,39 @@
         }
 
         $("#formUpdateProduct").validate({
-                rules: {
-                    tieude: {
-                        required: true,                    
-                    },
-                    noidung: {
-                        required: true,                    
-                    }
+            rules: {
+                tieude: {
+                    required: true,
                 },
-                messages:{
-                    tieude: {
-                        required: 'Tên tiêu đề không được để trống'
-                    },
-                    noidung: {
-                        required: 'Nội dung tiêu đề không được để trống'
-                    }
+                noidung: {
+                    required: true,
                 }
-            });
-            const count = files.length;
+            },
+            messages: {
+                tieude: {
+                    required: 'Tên tiêu đề không được để trống'
+                },
+                noidung: {
+                    required: 'Nội dung tiêu đề không được để trống'
+                }
+            }
+        });
+        $('#btnOk').click(function () {
+            $('#modalNotify').modal('hide');
+        })
+        const count = files.length;
         $('input[name=capnhattintuc]').click(function () {
             let count = files.length;
             for (let i = 0; i < count; i++) {
                 if (!files[i].type.includes('image')) {
-                    alert('Hình ảnh không hợp lệ');
+                    $('#mess').text('Hình ảnh không hợp lệ');
+
+                    $('#modalNotify').modal('show');
                     return false;
                 }
             }
             return true;
         })
     </script>
+
 </html>
