--- a/views/admin/pages/home.ejs
+++ b/views/admin/pages/home.ejs
@@ -1,45 +1,45 @@
 		<!-- //market-->
 		<div class="market-updates">
-			<div class="col-md-3 market-update-gd">
+			<div class="col-md-4 market-update-gd">
 				<div class="market-update-block clr-block-2">
 					<div class="col-md-4 market-update-right">
 						<i class="fa fa-eye"> </i>
 					</div>
 					 <div class="col-md-8 market-update-left">
-					 <h4>Visitors</h4>
-					<h3>13,500</h3>
-					<p>Other hand, we denounce</p>
+					 <h4>Số lượng sản phẩm</h4>
+					<h3><%= tong.length %></h3>
+					<p>Total product</p>
 				  </div>
 				  <div class="clearfix"> </div>
 				</div>
 			</div>
-			<div class="col-md-3 market-update-gd">
+			<div class="col-md-4 market-update-gd">
 				<div class="market-update-block clr-block-1">
 					<div class="col-md-4 market-update-right">
 						<i class="fa fa-users" ></i>
 					</div>
 					<div class="col-md-8 market-update-left">
-					<h4>Users</h4>
-						<h3>1,250</h3>
-						<p>Other hand, we denounce</p>
+					<h4>Tổng khách hàng</h4>
+						<h3><%= tongkh.length %></h3>
+						<p>Total user</p>
 					</div>
 				  <div class="clearfix"> </div>
 				</div>
 			</div>
-			<div class="col-md-3 market-update-gd">
+			<div class="col-md-4 market-update-gd">
 				<div class="market-update-block clr-block-3">
 					<div class="col-md-4 market-update-right">
 						<i class="fa fa-usd"></i>
 					</div>
 					<div class="col-md-8 market-update-left">
-						<h4>Sales</h4>
-						<h3>1,500</h3>
-						<p>Other hand, we denounce</p>
+						<h4>Tổng đơn hàng</h4>
+						<h3><%= tongdh.length %></h3>
+						<p>Total order</p>
 					</div>
 				  <div class="clearfix"> </div>
 				</div>
 			</div>
-			<div class="col-md-3 market-update-gd">
+			<!-- <div class="col-md-3 market-update-gd">
 				<div class="market-update-block clr-block-4">
 					<div class="col-md-4 market-update-right">
 						<i class="fa fa-shopping-cart" aria-hidden="true"></i>
@@ -51,7 +51,7 @@
 					</div>
 				  <div class="clearfix"> </div>
 				</div>
-			</div>
+			</div> -->
 		   <div class="clearfix"> </div>
 		</div>	
 		<!-- //market-->
