--- a/views/client/message/message.ejs
+++ b/views/client/message/message.ejs
@@ -19,6 +19,8 @@
                                     <div style="display: flex; justify-content: center; margin-top: 30px;">
                                         <img class="card-img-top" src="client/img/logo/muahang.png" style="width: 250px; height: 220px; justify-content: center; margin-bottom: 20px;" alt="Card image cap">
                                     </div>
+                               <% } else{%>
+                                    <a href="/dangnhap" style="margin-left:20px ;">=> Quay lại trang đăng nhập?</a>
                                <% } %>
                             </div>
                         </div>
