--- a/views/client/quenmatkhau/email.ejs
+++ b/views/client/quenmatkhau/email.ejs
@@ -48,7 +48,7 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <p>Email không tồn tại trong hệ thống</p>
+                                <p>Email không tồn tại</p>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" id="btnOk" class="btn btn-primary">Ok</button>
