--- a/views/client/canhan/doimatkhau.ejs
+++ b/views/client/canhan/doimatkhau.ejs
@@ -37,7 +37,24 @@
                         </div>
                 </div>
             </div>
-
+            <div class="modal fade" tabindex="-1" role="dialog" id="modalNotify">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Thông báo</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p><%= mess %></p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" id="btnOk" class="btn btn-primary">Ok</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <%- include ('../partials/footer'); -%>
         </div>
     </body>
@@ -71,13 +88,21 @@
                     }
                 }
             });
-            let mess = `<%= mess %>`
-            if(mess && mess != ''){
-                alert(mess);
+            $(document).ready(function(){
+                let mess = `<%= mess %>`;
 
-                if(mess == 'Đổi mật khẩu thành công'){
-                    window.location.replace('/dangnhap');
+                if(mess && mess != ''){
+                    $('#modalNotify').modal('show');
+
+                    $('#btnOk').click(function(){
+                        if(mess == 'Đổi mật khẩu thành công'){
+                            $('#modalNotify').modal('hide');
+                            window.location.replace('/dangnhap');
+                        }else{
+                            $('#modalNotify').modal('hide');
+                        } 
+                    })
                 }
-            }
+            });
     </script>
 </html>
