--- a/views/client/dangnhap/dangnhap.ejs
+++ b/views/client/dangnhap/dangnhap.ejs
@@ -58,15 +58,40 @@
                         </form>
                     </div>
                 </div>
+                <div class="modal fade" tabindex="-1" role="dialog" id="modalNotify">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title">Thông báo</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <p>Sai tên đăng nhập hoặc mật khẩu. Đăng nhập thất bại</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" id="btnOk" class="btn btn-primary">Ok</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <%- include ('../partials/footer'); -%>
         </div>
     </body>
 
     <script>
-        let mess = "<%= message %>";
-        if (mess) {
-            alert(mess);
-        }
+        $(document).ready(function(){
+            let mess = `<%= mess %>`;
+
+            if(mess && mess == 0){
+                $('#modalNotify').modal('show');
+
+                $('#btnOk').click(function(){
+                    $('#modalNotify').modal('hide');
+                })
+            }
+        });
 
         function authGoogle(){
             window.location.replace("/dangnhap/auth/google")
