--- a/views/client/giohang/giohang.ejs
+++ b/views/client/giohang/giohang.ejs
@@ -72,12 +72,29 @@
                                 
                             </div>
                         </div>
-                        
                         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
                             <div class="wc-proceed-to-checkout">
                                 <a onclick="validateTotalAmout()">Thanh toán</a>
                             </div>
                         </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal fade" tabindex="-1" role="dialog" id="modalNotify">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title">Thông báo</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <p>Đơn hàng của bạn phải nhỏ hơn 20 triệu</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" id="btnOk" class="btn btn-primary">Ok</button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -94,7 +111,11 @@
             return true;
         }
 
-        alert('Đơn hàng của bạn phải nhỏ hơn 20 triệu')
+        $('#modalNotify').modal('show');
+
+        $('#btnOk').click(function(){
+            $('#modalNotify').modal('hide');
+        })
         return false;
     }
     function changeCount(input){
