--- a/views/client/lichsumuahang/lichsumuahang.ejs
+++ b/views/client/lichsumuahang/lichsumuahang.ejs
@@ -60,14 +60,38 @@
                     </div>
                 </div>
             </form>
+            <div class="modal fade" tabindex="-1" role="dialog" id="modalNotify">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Thông báo</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p><%= mess %></p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" id="btnOk" class="btn btn-primary">Ok</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <%- include ('../partials/footer'); -%>
         </div>
     </body>
     <script>
-        let mess  = '<%= message %>';
+        $(document).ready(function(){
+            let mess = `<%= mess %>`;
 
-        if(mess && mess != ''){
-            alert(mess);
-        }
+            if(mess && mess != ''){
+                $('#modalNotify').modal('show');
+
+                $('#btnOk').click(function(){
+                    $('#modalNotify').modal('hide');
+                })
+            }
+        });
     </script>
 </html>
