--- a/views/client/lienhe/lienhe.ejs
+++ b/views/client/lienhe/lienhe.ejs
@@ -96,15 +96,40 @@
                         </div>
                     </div>
                 </div>
+                <div class="modal fade" tabindex="-1" role="dialog" id="modalNotify">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title">Thông báo</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <p>Gửi ý kiến thành công</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" id="btnOk" class="btn btn-primary">Ok</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <!-- contact-area-end -->
             <%- include ('../partials/footer'); -%>
         </div>
     </body>
     <script>
-        let mess = '<%= message %>';
-        if(mess){
-            alert(mess)
-        }
+        $(document).ready(function(){
+            let mess = `<%= mess %>`;
+
+            if(mess && mess == 0){
+                $('#modalNotify').modal('show');
+
+                $('#btnOk').click(function(){
+                    $('#modalNotify').modal('hide');
+                })
+            }
+        });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
     <script>
