--- a/views/client/timkiem/timkiem.ejs
+++ b/views/client/timkiem/timkiem.ejs
@@ -9,7 +9,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h3 style="margin-left:20px; margin-top:30px">Kết quả tìm kiếm: <%= search.length %> Sản phẩm</h3>
+                            <h3 style="margin-left:20px; margin-top:30px">Kết quả tìm kiếm: <%= numberProduct %> Sản phẩm</h3>
                                 <div style="display:flex; flex-wrap: wrap;">
                                     <% search.forEach(function(sp){ %>
                                         <div class="product-wrapper-container" style= "width:20%; height:20%;">
@@ -65,7 +65,18 @@
                                         </div>
                                     <% }) %>
                                 </div>
-                               
+                                <div style="display: flex; justify-content: center;">
+                                    <nav aria-label="Page navigation example">
+                                        <ul class="pagination">
+                                            <% for(let i=1; i<= pageNumber; i++) {%>
+                                                <li class="page-item">
+                                                    <a class="page-link" 
+                                                        href="/timkiem?page=<%= i %>&search=<%= keyword %>"><%= i %></a>
+                                                </li>
+                                          <% } %>
+                                        </ul>
+                                      </nav>
+                                </div>
                             </div>
                         </div>
                     </div>
